added spec for /auth/password/reset
